Fixed background issue on firefox

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 :root {
-    background-color: beige;
+    background-color: #d3d3d3;
     --navbar-color: #c7c7c7;
     --header-color: #d3d3d3;
+    --main-color: beige;
 }
 
 .gridbox {
@@ -10,6 +11,7 @@
     grid-template-columns: repeat(12, 1fr);
     text-align: center;
     align-items: center;
+    background-color: var(--main-color);
 }
 
 img {
